--- a/app/views/cheques/_form.html.erb
+++ b/app/views/cheques/_form.html.erb
@@ -19,10 +19,10 @@
     <%= f.label :amount %><br>
     <%= f.text_field :amount %>
   </div>
-  <div class="field">
+  <!-- <div class="field">
     <%= f.label :amount_text %><br>
     <%= f.text_field :amount_text %>
-  </div>
+  </div> -->
   <div class="field">
     <%= f.label :recipient_id %><br>
     <%= f.text_field :recipient_id %>
