--- a/app/views/cheques/index.html.erb
+++ b/app/views/cheques/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= cheque.date %></td>
         <td><%= cheque.amount %></td>
         <td><%= cheque.amount_text %></td>
-        <td><%= cheque.recipient %></td>
+        <td><%= cheque.recipient.recipient_name %></td>
         <td><%= link_to 'Show', cheque %></td>
         <td><%= link_to 'Edit', edit_cheque_path(cheque) %></td>
         <td><%= link_to 'Destroy', cheque, method: :delete, data: { confirm: 'Are you sure?' } %></td>
