--- a/app/views/recipients/index.html.erb
+++ b/app/views/recipients/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= recipient.recipient_name %></td>
         <td><%= recipient.customer.cust_name %></td>
-        <td><%= link_to 'Show', recipient %></td>
+        <!-- <td><%= link_to 'Show', recipient %></td>
         <td><%= link_to 'Edit', edit_recipient_path(recipient) %></td>
-        <td><%= link_to 'Destroy', recipient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', recipient, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
