--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -14,9 +14,9 @@
     <% @customers.each do |customer| %>
       <tr>
         <td><%= customer.cust_name %></td>
-        <td><%= link_to 'Show', customer %></td>
+        <!-- <td><%= link_to 'Show', customer %></td>
         <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
