--- a/app/views/cheques/new.html.erb
+++ b/app/views/cheques/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Cheque</h1>
+<div id="main-container" class="container">
+	<h1 class="headers">New Cheque</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', cheques_path %>
+	<p class="nav_link"><%= link_to 'Back', cheques_path %></p>
+</div>
