--- a/app/views/cheques/show.html.erb
+++ b/app/views/cheques/show.html.erb
@@ -1,24 +1,30 @@
-<p id="notice"><%= notice %></p>
+<div id="main-container" class="container">
+	<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Date:</strong>
-  <%= @cheque.date %>
-</p>
+	<form class="show_form">
+		<p>
+		  <strong>Date:</strong>
+		  <%= @cheque.date %>
+		</p>
 
-<p>
-  <strong>Amount:</strong>
-  <%= @cheque.amount %>
-</p>
+		<p>
+		  <strong>Amount:</strong>
+		  <%= @cheque.amount %>
+		</p>
 
-<p>
-  <strong>Amount text:</strong>
-  <%= @cheque.amount_text %>
-</p>
+		<p>
+		  <strong>Amount text:</strong>
+		  <%= @cheque.amount_text %>
+		</p>
 
-<p>
-  <strong>Recipient:</strong>
-  <%= @cheque.recipient.recipient_name %>
-</p>
+		<p>
+		  <strong>Recipient:</strong>
+		  <%= @cheque.recipient.recipient_name %>
+		</p>
+	</form>
 
-<%= link_to 'Edit', edit_cheque_path(@cheque) %> |
-<%= link_to 'Back', cheques_path %>
+	<p class="nav_link">
+		<!-- <%= link_to 'Edit', edit_cheque_path(@cheque) %> | -->
+		<%= link_to 'Back', cheques_path %>
+	</p>
+</div>
