--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -22,7 +22,7 @@ a {
   color: #000;
 
   &:visited {
-    color: #666;
+    color: #0066cc;
   }
 
   &:hover {
@@ -38,7 +38,8 @@ div {
 }
 
 #notice {
-  color: green;
+  color: #009933;
+  
 }
 
 .field_with_errors {
@@ -70,4 +71,43 @@ div {
     font-size: 12px;
     list-style: square;
   }
+}
+/*My custom styling with basic css and twitter boostrap*/
+.container {
+  background-color: #ffffff;
+  margin-top: 50px;
+  border-radius: 20px;
+  border: 4px solid #000000;
+}
+.form-group {
+  font-size: large;
+}
+.headers {
+  text-align: center;
+}
+.dropdown {
+  display: inline-block;
+}
+#cheque_recipient_id {
+  background-color: #ffffff;
+  border: 2px solid #0066cc;
+  border-radius: 2px;
+}
+.btn {
+  background-color: #0066cc;
+  color: #ffffff;
+  border-radius: 15px;
+  padding: 5px 10px;
+}
+
+.custom-btn {
+  background-color: #0066cc;
+  color: #ffffff;
+  border-radius: 15px;
+  padding: 5px 10px;
+}
+.nav_link {
+  margin-top: 20px;
+  font-size: 20px;
+  text-decoration: underline; 
 }
