--- a/app/views/cheques/_form.html.erb
+++ b/app/views/cheques/_form.html.erb
@@ -11,24 +11,28 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :date %><br>
-    <%= f.date_select :date %>
-  </div>
-  <div class="field">
-    <%= f.label :amount %><br>
-    <%= f.text_field :amount %>
-  </div>
-  <!-- <div class="field">
-    <%= f.label :amount_text %><br>
-    <%= f.text_field :amount_text %>
-  </div> -->
-  <div class="field">
-    <%= f.label :recipient_id %><br>
-    <!-- <%= f.text_field :recipient_id %> -->
-    <%= collection_select(:cheque, :recipient_id, Recipient.all, :id, :recipient_name, prompt: true) %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <form role="form"> 
+    <div class="form-group">
+      <%= f.label :date %><br>
+      <%= f.date_select :date %>
+    </div>
+  
+    
+    <div class="form-group">
+      <%= f.label :amount %><br>
+      <%= f.text_field :amount %>
+    </div>
+    <!-- <div class="field">
+      <%= f.label :amount_text %><br>
+      <%= f.text_field :amount_text %>
+    </div> -->
+    <div class="form-group">
+      <%= f.label :recipient_id %><br>
+      <!-- <%= f.text_field :recipient_id %> -->
+      <%= collection_select(:cheque, :recipient_id, Recipient.all, :id, :recipient_name, prompt: true) %>
+    </div>
+    <div class="action">
+      <%= f.submit %>
+    </div>
+  </form>
 <% end %>
