--- a/app/views/cheques/index.html.erb
+++ b/app/views/cheques/index.html.erb
@@ -1,38 +1,44 @@
-<p id="notice"><%= notice %></p>
+<div id="main-container" class="container">
+	<p id="notice"><%= notice %></p>
 
-<h1>Listing Cheques</h1>
-<form>
-  Select Recipient:
-  <%= collection_select(:cheque, :recipient_id, Recipient.all, :id, :recipient_name, prompt: true) %>
-  <input type="submit" value="Filter">
-</form>
+	<h1 class="headers">Listing Cheques</h1>
+	<form role="form">
+		<div class="form-group">
+		  <label for="Please select">Select Recipient:</label>
+		  <div class="dropdown">
+		  	<%= collection_select(:cheque, :recipient_id, Recipient.all, :id, :recipient_name, prompt: true) %>
+		  </div>
+		  <input class="btn" type="submit" value="Filter">
+	  </div>
+	</form>
 
-<table>
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Amount</th>
-      <th>Amount text</th>
-      <th>Recipient</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+	<table class="table">
+	  <thead>
+	    <tr>
+	      <th>Date</th>
+	      <th>Amount</th>
+	      <th>Amount text</th>
+	      <th>Recipient</th>
+	      <th colspan="3"></th>
+	    </tr>
+	  </thead>
 
-  <tbody>
-    <% @cheques.each do |cheque| %>
-      <tr>
-        <td><%= cheque.date %></td>
-        <td><%= cheque.amount %></td>
-        <td><%= cheque.amount_text %></td>
-        <td><%= cheque.recipient.recipient_name %></td>
-        <!-- <td><%= link_to 'Show', cheque %></td>
-        <td><%= link_to 'Edit', edit_cheque_path(cheque) %></td>
-        <td><%= link_to 'Destroy', cheque, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+	  <tbody>
+	    <% @cheques.each do |cheque| %>
+	      <tr>
+	        <td><%= cheque.date %></td>
+	        <td><%= cheque.amount %></td>
+	        <td><%= cheque.amount_text %></td>
+	        <td><%= cheque.recipient.recipient_name %></td>
+	        <!-- <td><%= link_to 'Show', cheque %></td>
+	        <td><%= link_to 'Edit', edit_cheque_path(cheque) %></td>
+	        <td><%= link_to 'Destroy', cheque, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+	      </tr>
+	    <% end %>
+	  </tbody>
+	</table>
 
-<br>
+	<br>
 
-<%= link_to 'New Cheque', new_cheque_path %>
+	<p><%= link_to 'CREATE NEW CHEQUE', new_cheque_path %></p>
+</div>
