--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,27 +1,33 @@
-<p id="notice"><%= notice %></p>
+<div id="main-container" class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>Listing Customers</h1>
+  <h1 class="headers">Listing Customers</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Cust name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <form class="show_form">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Customer Name</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @customers.each do |customer| %>
-      <tr>
-        <td><%= customer.cust_name %></td>
-        <!-- <td><%= link_to 'Show', customer %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @customers.each do |customer| %>
+          <tr>
+            <td><%= customer.cust_name %></td>
+            <!-- <td><%= link_to 'Show', customer %></td>
+            <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
+            <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </form>
 
-<br>
+  <br>
 
-<%= link_to 'New Customer', new_customer_path %>
+  <p class="nav_link">
+    <%= link_to 'New Customer', new_customer_path %>
+  </p>
+</div>
