--- a/app/views/recipients/index.html.erb
+++ b/app/views/recipients/index.html.erb
@@ -1,29 +1,33 @@
-<p id="notice"><%= notice %></p>
+<div id="main-container" class="container">
 
-<h1>Listing Recipients</h1>
+  <p id="notice"><%= notice %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Recipient name</th>
-      <th>Customer</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <h1 class="headers">Listing Recipients</h1>
 
-  <tbody>
-    <% @recipients.each do |recipient| %>
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= recipient.recipient_name %></td>
-        <td><%= recipient.customer.cust_name %></td>
-        <!-- <td><%= link_to 'Show', recipient %></td>
-        <td><%= link_to 'Edit', edit_recipient_path(recipient) %></td>
-        <td><%= link_to 'Destroy', recipient, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+        <th>Recipient name</th>
+        <th>Customer</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @recipients.each do |recipient| %>
+        <tr>
+          <td><%= recipient.recipient_name %></td>
+          <td><%= recipient.customer.cust_name %></td>
+          <!-- <td><%= link_to 'Show', recipient %></td>
+          <td><%= link_to 'Edit', edit_recipient_path(recipient) %></td>
+          <td><%= link_to 'Destroy', recipient, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Recipient', new_recipient_path %>
+  <br>
+
+  <p class="nav_link"><%= link_to 'Add New Recipient', new_recipient_path %></p>
+
+</div>
