--- a/app/views/recipients/new.html.erb
+++ b/app/views/recipients/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Recipient</h1>
+<div id="main-container" class="container">
 
-<%= render 'form' %>
+	<h1 class="headers">New Recipient</h1>
 
-<%= link_to 'Back', recipients_path %>
+	<%= render 'form' %>
+
+	<p class="nav_link"><%= link_to 'Back', recipients_path %></p>
+
+</div>	
