Additional bootstrap styling

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -39,7 +39,7 @@ div {
 
 #notice {
   color: #009933;
-  
+
 }
 
 .field_with_errors {
@@ -110,4 +110,7 @@ div {
   margin-top: 20px;
   font-size: 20px;
   text-decoration: underline; 
+}
+.action {
+  padding-top: 30px;
 }
