--- a/app/views/cheques/new.html.erb
+++ b/app/views/cheques/new.html.erb
@@ -1,5 +1,5 @@
 <div id="main-container" class="container">
-	<h1 class="headers">New Cheque</h1>
+	<h1 class="headers">Add Cheque</h1>
 
 	<%= render 'form' %>
 
