Added Login page

--- a/app/views/cheques/index.html.erb
+++ b/app/views/cheques/index.html.erb
@@ -1,7 +1,7 @@
 <div id="main-container" class="container">
 	<p id="notice"><%= notice %></p>
 
-	<h1 class="headers">Listing Cheques</h1>
+	<h1 class="headers">Cheques Issued</h1>
 	<form role="form">
 		<div class="form-group">
 		  <label for="Please select">Select Recipient:</label>
@@ -40,5 +40,5 @@
 
 	<br>
 
-	<p><%= link_to 'CREATE NEW CHEQUE', new_cheque_path %></p>
+	<!-- <p><%= link_to 'CREATE NEW CHEQUE', new_cheque_path %></p> -->
 </div>
