--- a/app/views/recipients/index.html.erb
+++ b/app/views/recipients/index.html.erb
@@ -17,7 +17,7 @@
       <% @recipients.each do |recipient| %>
         <tr>
           <td><%= recipient.recipient_name %></td>
-          <td><%= recipient.customer.cust_name %></td>
+          <td><%= recipient.customer.customer_id %></td>
           <!-- <td><%= link_to 'Show', recipient %></td>
           <td><%= link_to 'Edit', edit_recipient_path(recipient) %></td>
           <td><%= link_to 'Destroy', recipient, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
