--- a/app/views/recipients/show.html.erb
+++ b/app/views/recipients/show.html.erb
@@ -9,7 +9,7 @@
 
 	<p>
 	  <strong>Customer:</strong>
-	  <%= @recipient.customer_id %>
+	  <%= @recipient.customer.cust_name %>
 	</p>
 
 	<p class="nav_link">
