--- a/app/views/recipients/index.html.erb
+++ b/app/views/recipients/index.html.erb
@@ -28,6 +28,6 @@
 
   <br>
 
-  <p class="nav_link"><%= link_to 'Add New Recipient', new_recipient_path %></p>
+  <!-- <p class="nav_link"><%= link_to 'Add New Recipient', new_recipient_path %></p> -->
 
 </div>
