--- a/app/views/cheques/new.html.erb
+++ b/app/views/cheques/new.html.erb
@@ -3,5 +3,5 @@
 
 	<%= render 'form' %>
 
-	<p class="nav_link"><%= link_to 'Back', cheques_path %></p>
+	<!-- <p class="nav_link"><%= link_to 'Back', cheques_path %></p> -->
 </div>
