Investigating rake tests

--- a/app/views/recipients/show.html.erb
+++ b/app/views/recipients/show.html.erb
@@ -1,6 +1,7 @@
+<p id="notice"><%= notice %></p>
 <div id="main-container" class="container">
 
-	<p id="notice"><%= notice %></p>
+	
 
 	<p>
 	  <strong>Recipient name:</strong>
@@ -12,8 +13,8 @@
 	  <%= @recipient.customer.cust_name %>
 	</p>
 
-	<p class="nav_link">
+	<!-- <p class="nav_link">
 		<%= link_to 'Edit', edit_recipient_path(@recipient) %> |
 		<%= link_to 'Back', recipients_path %>
-	</p>	
+	</p> -->	
 </div>
