--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -78,6 +78,7 @@ div {
   margin-top: 50px;
   border-radius: 20px;
   border: 4px solid #000000;
+  padding: 10px;
 }
 .form-group {
   font-size: large;
